--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "test": "mocha -gc --reporter spec --use_strict"
   },
   "dependencies": {
-    "bindings": "1",
+    "bindings": "^1.3.0",
     "debug": "2",
-    "nan": "2"
+    "nan": "^2.11.0"
   },
   "devDependencies": {
     "dox": "0.4.4",
